# OpenGl_Udemy_Course

./: .gitmodules  CMakeLists.txt  main.cpp
include/GLAD/include/glad/: glad.h
include/GLAD/src/: glad.c
